--- a/package.json
+++ b/package.json
@@ -6,15 +6,21 @@
     "@material-ui/core": "^4.3.3",
     "@material-ui/icons": "^4.2.1",
     "@types/jest": "24.0.18",
+    "@types/jszip": "^3.1.6",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-router-dom": "^4.3.5",
+    "@types/react-virtualized": "^9.21.4",
+    "jszip": "^3.2.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "react-virtualized": "^9.21.1",
+    "twitter-archive-reader": "^1.0.1",
+    "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
   "scripts": {
