--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-virtualized": "^9.21.4",
     "jszip": "^3.2.2",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
-    "twitter-archive-reader": "^1.3.3",
+    "twitter-archive-reader": "^1.3.4",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
@@ -28,9 +30,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
