--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-virtualized": "^9.21.4",
+    "@types/socket.io-client": "^1.4.32",
+    "event-target-shim": "^5.0.1",
     "jszip": "^3.2.2",
     "node-sass": "^4.12.0",
+    "notistack": "^0.8.9",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
-    "twitter-archive-reader": "^1.3.5",
+    "socket.io-client": "^2.2.0",
+    "twitter-archive-reader": "^1.3.7",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
