--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-virtualized": "^9.21.4",
     "@types/socket.io-client": "^1.4.32",
     "event-target-shim": "^5.0.1",
+    "grapheme-splitter": "^1.0.4",
     "jszip": "^3.2.2",
     "node-sass": "^4.12.0",
     "notistack": "^0.8.9",
@@ -25,7 +26,8 @@
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
     "socket.io-client": "^2.2.0",
-    "twitter-archive-reader": "^1.3.7",
+    "timerize": "^1.0.3",
+    "twitter-archive-reader": "^1.3.8",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
