--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "archive-explorer-web",
-  "version": "0.1.0",
-  "private": true,
+  "version": "0.4.0",
+  "license": "CC BY-SA 4.0",
+  "repository": "https://github.com/alkihis/archive-explorer-web",
+  "bugs": "https://github.com/alkihis/archive-explorer-web/issues",
   "dependencies": {
     "@material-ui/core": "^4.4.2",
     "@material-ui/icons": "^4.4.1",
