--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
     "jszip": "^3.2.2",
+    "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "notistack": "^0.8.9",
     "react": "^16.9.0",
@@ -27,9 +28,9 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
-    "socket.io-client": "^2.2.0",
+    "socket.io-client": "^2.3.0",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^1.4.5",
+    "twitter-archive-reader": "^1.5.0",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
