--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "archive-explorer-web",
   "version": "0.4.0",
-  "license": "CC BY-NC-SA 4.0",
+  "license": "CC-BY-NC-SA-4.0",
   "repository": "https://github.com/alkihis/archive-explorer-web",
   "bugs": "https://github.com/alkihis/archive-explorer-web/issues",
   "dependencies": {
-    "@material-ui/core": "^4.4.2",
-    "@material-ui/icons": "^4.4.1",
+    "@material-ui/core": "^4.4.3",
+    "@material-ui/icons": "^4.4.3",
     "@types/jest": "24.0.18",
     "@types/jszip": "^3.1.6",
     "@types/node": "12.7.2",
@@ -24,12 +24,12 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-infinite-scroller": "^1.2.4",
-    "react-router-dom": "^5.0.1",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
     "socket.io-client": "^2.3.0",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^1.5.2",
+    "twitter-archive-reader": "^1.5.3",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
