--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-infinite-scroller": "^1.2.4",
+    "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.1.1",
     "react-virtualized": "^9.21.1",
