--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.29",
     "@types/jest": "24.0.18",
     "@types/jszip": "^3.1.6",
     "@types/node": "12.7.2",
@@ -30,7 +31,7 @@
     "react-virtualized": "^9.21.1",
     "socket.io-client": "^2.3.0",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^1.6.1",
+    "twitter-archive-reader": "^1.6.3",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
