--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "repository": "https://github.com/alkihis/archive-explorer-web",
   "bugs": "https://github.com/alkihis/archive-explorer-web/issues",
   "dependencies": {
-    "@material-ui/core": "^4.7.1",
+    "@material-ui/core": "^4.7.2",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.34",
+    "@material-ui/lab": "^4.0.0-alpha.35",
     "@types/jest": "24.0.18",
     "@types/jszip": "^3.1.6",
     "@types/node": "12.7.2",
@@ -27,11 +27,11 @@
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "react-virtualized": "^9.21.2",
     "socket.io-client": "^2.3.0",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^2.0.3",
+    "twitter-archive-reader": "^2.0.4",
     "twitter-d": "^0.4.0",
     "typescript": "3.5.3"
   },
