--- a/package.json
+++ b/package.json
@@ -5,21 +5,27 @@
   "repository": "https://github.com/alkihis/archive-explorer-web",
   "bugs": "https://github.com/alkihis/archive-explorer-web/issues",
   "dependencies": {
-    "@material-ui/core": "^4.8.1",
+    "@alkihis/react-d3-cloud": "^0.7.0",
+    "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.37",
+    "@material-ui/lab": "^4.0.0-alpha.39",
     "@types/jest": "24.0.18",
-    "@types/jszip": "^3.1.6",
+    "@types/js-cookie": "^2.2.4",
+    "@types/jszip": "^3.1.7",
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^4.3.5",
     "@types/react-virtualized": "^9.21.7",
+    "@types/recharts": "^1.8.4",
     "@types/socket.io-client": "^1.4.32",
+    "@types/uuid": "^3.4.6",
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
+    "js-cookie": "^2.2.1",
     "jszip": "^3.2.2",
+    "localforage": "^1.7.3",
     "node-sass": "^4.13.0",
     "notistack": "^0.8.9",
     "react": "^16.12.0",
@@ -29,11 +35,14 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
     "react-virtualized": "^9.21.2",
+    "recharts": "^2.0.0-beta.1",
     "socket.io-client": "^2.3.0",
+    "stopword": "^0.3.4",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^2.0.7",
+    "twitter-archive-reader": "^2.1.6",
     "twitter-d": "^0.4.0",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.4",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
