Added advanced search

--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "bugs": "https://github.com/alkihis/archive-explorer-web/issues",
   "dependencies": {
     "@alkihis/react-d3-cloud": "^0.7.0",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.8.3",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
+    "@material-ui/pickers": "^3.2.9",
     "@types/jest": "24.9.0",
     "@types/js-cookie": "^2.2.4",
     "@types/jszip": "^3.1.7",
@@ -21,6 +23,7 @@
     "@types/recharts": "^1.8.5",
     "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.6",
+    "date-fns": "^2.9.0",
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
     "js-cookie": "^2.2.1",
