--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "dependencies": {
     "@alkihis/react-d3-cloud": "^0.7.0",
     "@date-io/date-fns": "1.x",
-    "@material-ui/core": "^4.9.5",
+    "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.45",
+    "@material-ui/lab": "4.0.0-alpha.47",
     "@material-ui/pickers": "^3.2.9",
     "@types/jest": "24.9.0",
     "@types/js-cookie": "^2.2.5",
@@ -20,29 +20,29 @@
     "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-virtualized": "^9.21.7",
-    "@types/recharts": "^1.8.7",
+    "@types/recharts": "^1.8.9",
     "@types/socket.io-client": "^1.4.32",
     "@types/uuid": "^3.4.8",
-    "date-fns": "^2.10.0",
+    "date-fns": "^2.11.1",
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
     "js-cookie": "^2.2.1",
-    "jszip": "^3.2.2",
+    "jszip": "^3.3.0",
     "localforage": "^1.7.3",
     "node-sass": "^4.13.1",
     "notistack": "^0.9.9",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.0",
+    "react-scripts": "^3.4.1",
     "react-virtualized": "^9.21.2",
-    "recharts": "^2.0.0-beta.3",
+    "recharts": "^2.0.0-beta.5",
     "socket.io-client": "^2.3.0",
-    "stopword": "^0.3.4",
+    "stopword": "^0.3.5",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^6.4.0",
+    "twitter-archive-reader": "^6.4.2",
     "twitter-d": "^0.4.0",
     "typescript": "^3.8.3",
     "uuid": "^3.3.3"
