--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "@alkihis/react-d3-cloud": "^0.7.0",
     "@date-io/date-fns": "1.x",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "4.0.0-alpha.47",
     "@material-ui/pickers": "^3.2.9",
     "@types/jest": "24.9.0",
@@ -18,10 +18,10 @@
     "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/react-infinite-scroller": "^1.2.1",
-    "@types/react-router-dom": "^5.1.5",
-    "@types/react-virtualized": "^9.21.10",
-    "@types/recharts": "^1.8.15",
-    "@types/socket.io-client": "^1.4.33",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/react-virtualized": "^9.21.11",
+    "@types/recharts": "^1.8.19",
+    "@types/socket.io-client": "^1.4.35",
     "@types/uuid": "^3.4.9",
     "date-fns": "^2.16.1",
     "event-target-shim": "^5.0.1",
@@ -31,20 +31,21 @@
     "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-infinite-scroller": "^1.2.4",
     "react-modal-image": "^2.5.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.3",
-    "react-virtualized": "^9.22.2",
-    "recharts": "^2.0.0-beta.7",
-    "socket.io-client": "^2.3.0",
+    "react-scripts": "^3.4.4",
+    "react-virtualized": "^9.22.3",
+    "recharts": "^2.0.3",
+    "socket.io-client": "^2.4.0",
     "stopword": "^0.3.5",
     "timerize": "^1.0.3",
     "twitter-archive-reader": "^7.0.0-alpha3",
     "twitter-archive-saver": "^1.1.0",
     "twitter-d": "^0.4.0",
+    "twitter-snowflake-to-date": "^1.0.2",
     "typescript": "^3.9.7",
     "uuid": "^3.3.3"
   },
