Added new operators and updates TAR

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/recharts": "^1.8.19",
     "@types/socket.io-client": "^1.4.35",
     "@types/uuid": "^3.4.9",
-    "date-fns": "^2.16.1",
+    "date-fns": "^2.17.0",
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
     "js-cookie": "^2.2.1",
@@ -38,11 +38,11 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-virtualized": "^9.22.3",
-    "recharts": "^2.0.3",
+    "recharts": "^2.0.4",
     "socket.io-client": "^2.4.0",
     "stopword": "^0.3.5",
     "timerize": "^1.0.3",
-    "twitter-archive-reader": "^7.0.0-alpha3",
+    "twitter-archive-reader": "^7.0.2",
     "twitter-archive-saver": "^1.1.0",
     "twitter-d": "^0.4.0",
     "twitter-snowflake-to-date": "^1.0.2",
