--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "date-fns": "^2.17.0",
     "event-target-shim": "^5.0.1",
     "grapheme-splitter": "^1.0.4",
+    "iterator-helper": "^1.1.2",
     "js-cookie": "^2.2.1",
-    "jszip": "^3.5.0",
+    "jszip": "^3.6.0",
     "localforage": "^1.9.0",
     "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
@@ -38,7 +39,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-virtualized": "^9.22.3",
-    "recharts": "^2.0.4",
+    "recharts": "^2.0.6",
     "socket.io-client": "^2.4.0",
     "stopword": "^0.3.5",
     "timerize": "^1.0.3",
@@ -46,7 +47,7 @@
     "twitter-archive-saver": "^1.1.0",
     "twitter-d": "^0.4.0",
     "twitter-snowflake-to-date": "^1.0.2",
-    "typescript": "^3.9.7",
+    "typescript": "^3.9.9",
     "uuid": "^3.3.3"
   },
   "scripts": {
