--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "js-cookie": "^2.2.1",
     "jszip": "^3.6.0",
     "localforage": "^1.9.0",
-    "node-sass": "^4.14.1",
     "notistack": "^0.9.17",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -40,6 +39,8 @@
     "react-scripts": "^3.4.4",
     "react-virtualized": "^9.22.3",
     "recharts": "^2.0.6",
+    "sass": "^1.62.1",
+    "sass-loader": "^10.4.1",
     "socket.io-client": "^2.4.0",
     "stopword": "^0.3.5",
     "timerize": "^1.0.3",
